<resources>
    <string name="app_name">RummyTitans</string>
    <string name="app_name_rummy">RummyTitans</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=</string>
    <string name="appsflyer_open_app_link">rummytitansopenapp</string>
    <string name="txt_or">or</string>
    <string name="change_language">Do you want to change language ?</string>
    <string name="allow_notifications">Go to settings and allow notifications for RummyTitans</string>
    <string name="txt_sign_up_continue">Continue</string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="allow_contacts_msg">Please permit the permission through the Settings to access your contacts.</string>
    <string name="permission_description">Select Permission -> Enable Permission</string>
    <string name="no_contact_pls_update">You haven\'t sync your contacts yet, Please sync your contacts first</string>
    <string name="do_you_realy_wants_update_contacts">Do you want to update your Contacts?</string>
    <string name="err_invalid_email">Please enter a valid email address!</string>
    <string name="err_invalid_mobile_number">Please enter a valid mobile number!</string>
    <string name="err_invalid_otp">Please enter a valid OTP!</string>
    <string name="fantasy_point_system">Fantasy Point System</string>
    <string name="how_to_play">How To Play</string>
    <string name="about_us">About Us</string>
    <string name="faq_s">FAQs</string>
    <string name="legalities">Legalities</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="tutorial_videos">Tutorial Videos</string>
    <string name="refer_terms_amp_conditions"><![CDATA[Refer Terms & Conditions]]></string>
    <string name="err_session_expired">Session Expired! Please login again to continue!</string>
    <string name="live_chat">@string/eng_menu_live_chat</string>
    <string name="myteam11_blog">RummyTitans Blog</string>
    <string name="add_cash">Add Cash</string>
    <string name="add_cash_to_wallet">Add Cash to Wallet</string>
    <string name="add">ADD</string>
    <string name="get">GET</string>
    <string name="total_get">TOTAL GET</string>
    <string name="action">ACTION</string>
    <string name="eng_menu_refer">Refer &amp; Earn</string>
    <string name="eng_menu_follow_us">Follow Us</string>
    <string name="eng_menu_live_chat">Live Chat</string>
    <string name="each_of_the_above_offers_can_be_availed_once_per_user">Each of the above offers can be availed once per user.</string>
    <string name="act_payment_card_number">Card Number</string>
    <string name="act_refer_title">Refer</string>
    <string name="act_refer_invite_friends">+INVITE FRIENDS</string>
    <string name="act_verification_pan_card_verification">PAN CARD VERIFICATION</string>
    <string name="act_verification_bank_verification">BANK ACCOUNT VERIFICATION</string>
    <string name="bs_join_confirmation">Confirmation</string>
    <string name="bs_join_usable_balance">Usable Balance</string>
    <string name="bs_join_winning_unutilized">(Winning + Unutilized)</string>
    <string name="frag_wallet_total_balance">Total Balance</string>
    <string name="frag_wallet_unutilized">Unutilized</string>
    <string name="frag_wallet_offer_available">Offer Available</string>
    <string name="select_contacts">Select Contact</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_internet_found_check_your_connection_or_try_again">No Internet found. Check your connection or try again.</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_progress_please_wait_while_we_initialize_your_payment">Please wait, while we initialize your
        payment!
    </string>
    <string name="dialog_times_up">Times Up</string>
    <string name="dialog_times_up_go_back">Go Back</string>
    <string name="frag_bank_verification_verify_your_bank_account">VERIFY YOUR BANK ACCOUNT</string>
    <string name="frag_bank_verification_transfer_your_winnings_to_your_bank_account_for_withdrawing_money_from_myteam11_please_verify_your_bank_account_by_following_below_steps">
        Transfer your Winnings to your Bank Account. For withdrawing money from RummyTitans, please verify your Bank
        account by following below steps.
    </string>
    <string name="frag_bank_verification_upload_bank_account_proof">Upload Bank Account Proof\n(We accept Passbook front page image, Online Bank account statement screenshot, Cancelled Cheque Image)</string>
    <string name="frag_bank_verification_full_name">Full Name</string>
    <string name="frag_bank_verification_enter_full_name">Enter Full Name</string>
    <string name="frag_bank_verification_account_number">Account Number</string>
    <string name="frag_bank_verification_enter_account_number">Enter Account Number</string>
    <string name="frag_bank_verification_re_enter_account_number">Re-Enter Account Number</string>
    <string name="frag_bank_verification_ifsc_code">IFSC Code</string>
    <string name="frag_bank_verification_enter_ifsc_code">Enter IFSC Code</string>
    <string name="frag_bank_verification_bank_name">Bank Name</string>
    <string name="frag_bank_verification_name_of_your_bank">Name of Your Bank</string>
    <string name="frag_bank_verification_bank_branch">Bank Branch</string>
    <string name="frag_bank_verification_name_of_your_branch">Name of Your Branch</string>
    <string name="frag_bank_verification_verify_bank_account">VERIFY Bank Account</string>
    <string name="frag_cash_bonus_add_cash">+ ADD CASH</string>
    <string name="frag_cash_bonus_remaining">Remaining</string>
    <string name="frag_cash_bonus_used">Used</string>
    <string name="frag_feedback">Feedback</string>
    <string name="frag_feedback_title">Title</string>
    <string name="frag_feedback_your_massage">Your Message</string>
    <string name="frag_feedback_submit">Submit</string>
    <string name="frag_follow_us_facebook">Facebook</string>
    <string name="frag_follow_us_twitter">Twitter</string>
    <string name="frag_follow_us_instagram">Instagram</string>
    <string name="frag_follow_us_youtube">YouTube</string>
    <string name="frag_more_follow_us">@string/eng_menu_follow_us</string>
    <string name="frag_pan_add_your_pan_card_details">ADD YOUR PAN CARD DETAILS</string>
    <string name="frag_pan_upload_pan_card_image_or_pdf">UPLOAD PAN CARD IMAGE</string>
    <string name="frag_pan_name_on_pan_card">Pan Card Holder Name</string>
    <string name="frag_pan_enter_name_on_pan_card">Enter Name on Pan Card</string>
    <string name="frag_pan_pan_number">Pan Number</string>
    <string name="frag_pan_enter_pan_card_number">Enter Pan Card Number</string>
    <string name="frag_pan_date_of_birth">Date Of Birth</string>
    <string name="frag_pan_select_dob">Select DOB</string>
    <string name="frag_pan_select_state">Select State</string>
    <string name="frag_pan_verify_pan_card">VERIFY PAN CARD</string>
    <string name="search_contact">Search Contact With Name</string>
    <string name="frag_recent_transactions">Recent Transactions</string>
    <string name="frag_recent_transactions_add_cash">+ ADD CASH</string>
    <string name="frag_refer_refer_amp_earn">@string/eng_menu_refer</string>
    <string name="frag_invite_friend">Invite Contacts</string>
    <string name="share">SHARE</string>
    <string name="language_discription">We Offer Two Languages</string>
    <string name="notification_discription">Manage notifications as per your need</string>
    <string name="theme_change">Colour Theme</string>
    <string name="theme_discription">Customise your app as per your preference</string>
    <string name="match_time_type">Match Time</string>
    <string name="match_discription">Set the time format best suitable to you</string>
    <string name="manage_notification">Manage Notifications</string>
    <string name="frag_support_our_customer_support_is_available_24_7">We are RummyTitans Help Desk team. we are available for 24x7 you have many options to contact us.</string>
    <string name="frag_support_email_us">Email Us</string>
    <string name="frag_support_call_now">Call Now</string>
    <string name="frag_support_faq">FAQ</string>
    <string name="frag_verify_email">Email</string>
    <string name="frag_verify_verify">Verify</string>
    <string name="frag_verify_mobile">Mobile</string>
    <string name="frag_verify_pan_card">Pan Card</string>
    <string name="frag_withdrawal_withdrawal_now">WITHDRAWAL NOW</string>
    <string name="version">Version</string>
    <string name="please_enter_valid_cvv_code">Please enter valid CVV code!</string>
    <string name="something_went_wrong">Something Went Wrong!</string>
    <string name="something_went_wrong_restart">Something Went Wrong! Please Restart App</string>
    <string name="please_enter_correct_cvv_code">Please enter correct CVV code!</string>
    <string name="please_enter_a_valid_card_number">Please enter a valid card number.</string>
    <string name="something_went_wrong_try_again">Something Went Wrong! Please try again</string>
    <string name="card_deleted_succesfully">Card deleted successfully!</string>
    <string name="code_copied">Refer Code Copied!</string>
    <string name="select_your_state">Select Your State</string>
    <string name="please_wait_fetching_refer_code">Please wait while we are fetching your Refer code.</string>
    <string name="please_verify_your_email_first">Please verify your Email Address first to verify your PAN Card</string>
    <string name="please_verify_your_pan_first">Please verify your PAN Card first to verify your Bank Details</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="withdraw_money_need_grater_then">Withdrawal amount need be greater than ₹</string>
    <string name="withdraw_money_need_grater_then1"> to process your request!</string>
    <string name="withdraw_money_should_not_exced">Withdrawal amount should not exceed the winning amount.</string>
    <string name="withdraw_money_should_not_exced1">Withdrawal amount should not exceed 50000</string>
    <string name="oops_minimum_limit_od_add_ammount">Oops! Minimum limit of add amount is 10 rupees.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="withdrawal_ammount_should_not_exceed">Withdrawal amount should not exceed the winning amount.</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_acc_number">Enter Your Account Number</string>
    <string name="reenter_your_acc_number">Re Enter Your Account Number</string>
    <string name="acc_number_not_matched">Account Number Not Matched</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="enter_valid_ifsc_code">Enter Valid IFSC Code</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_bank_branch">Enter Bank Branch</string>
    <string name="select_pan_card_image">Select Pan Card Image</string>
    <string name="enter_name_on_card">Enter Name On Pan Card</string>
    <string name="enter_pan_number">Enter Pan Number</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="enter_valid_pan_number">Enter Valid Pan Number</string>
    <string name="select_state">Please Select State</string>
    <string name="only_jpg_png_pdf_supported">Only JPG, PNG file format supported</string>
    <string name="upload_from_gallery">UPLOAD FROM GALLERY</string>
    <string name="make_sure_your_details_are_legible">Make sure your details are legible and clear in the document.\nSupported file type: .jpeg, .png\nSize up to 5MB</string>
    <string name="capture_form_camera">Capture From Camera</string>
</resources>