<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="4dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:background="@drawable/bottom_button"
        android:backgroundTint="@color/text_color5"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/text_color8"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/image_placeholder_upload"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtImageHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/make_sure_your_details_are_legible"
            android:textColor="@color/text_color2"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_squre_shape"
            android:backgroundTint="@color/alertGreen"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/capture_form_camera"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_medium"
            app:layout_constraintTop_toBottomOf="@+id/txtImageHint"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_squre_shape"
            android:backgroundTint="@color/alertGreen"
            android:text="@string/upload_from_gallery"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_medium"
            app:layout_constraintTop_toBottomOf="@+id/txtImageHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btnCamera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
